--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             <div class="container__contenido">
                 <div class="container_informacion">
                     <p id="muestra_array" class="parrafo_array"></p>
-                    <p id="info_array" class="parrafo_array">Aqui aparecerá la información del Array.</p>
+                    <p id="info_array" class="parrafo_array"></p>
                 </div>
                 <div class="container_botones">
                     <input type="button" value="Información de Array" id="boton_info_array" class="clase__boton">
                     <input type="button" value="Añadir Lenguajes" id="boton_mas_lenguajes" class="clase__boton">
+                </div>
+                <div class="container_reboot_button">
+                    <input type="button" value="Reiniciar" class="clase__boton" id="reboot">
                 </div>
             </div>
         </main>
